@@ -1031,6 +1031,7 @@ int UI_SelectCartType(int k)
 		UI_MENU_ACTION(CARTRIDGE_STD_2, CARTRIDGE_TextDesc[CARTRIDGE_STD_2]),
 		UI_MENU_ACTION(CARTRIDGE_STD_4, CARTRIDGE_TextDesc[CARTRIDGE_STD_4]),
 		UI_MENU_ACTION(CARTRIDGE_RIGHT_4, CARTRIDGE_TextDesc[CARTRIDGE_RIGHT_4]),
+		UI_MENU_ACTION(CARTRIDGE_BLIZZARD_32, CARTRIDGE_TextDesc[CARTRIDGE_BLIZZARD_32]),
 		UI_MENU_END
 	};
 
